# mcpelauncher-client

./: .gitignore  .gitmodules  CMakeLists.txt  CPackSettings.cmake
include/: argrewrite.h
include/glad/: glad.h
src/: InputQueue.cpp  InputQueue.h  JNIBinding.cpp  JNIBinding.h  armhf_support.cpp  client_app_platform.cpp  cll_upload_auth_step.cpp  cll_upload_auth_step.h  cpuid.cpp  gl_core_patch.cpp  hbui_patch.cpp  http_request_stub.cpp  main.cpp  native_activity.h  text_input_handler.cpp  text_input_handler.h  tts_patch.cpp  window_callbacks.cpp  window_callbacks.h  xbox_live_game_interface.cpp  xbox_live_game_interface.h  xbox_live_helper.cpp  xbox_live_helper.h
src/jni/: HardwareInformation.cpp  Http.cpp  InputManager.cpp  MainActivity.cpp  Misc.cpp  Store.cpp  Untitled-1  XboxLive.cpp  coreaudio.cpp  coreaudio.h  jni_descriptors.cpp  jni_support.cpp
